--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,35 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.sign-in, .sign-up{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f8f9fa;
+  gap: 1rem;
+}
+.sign-in form, .sign-up form{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.sign-in form input, .sign-up form input{
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+}
+.sign-in form button, .sign-up form button{
+  padding: 0.5rem 1rem;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+a{
+  text-decoration: none;
+}
